# CP-emu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
ebuild/: Addin.c  Addin.g3a  MyAddin.g3a  app.js  ruk.js  ruk.js.map  style.css
ruk-ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ruk-ui/src/: App.svelte  app.css  global.d.ts  lunar-ui.css  main.ts
ruk-ui/src/assets/: background.svelte  calculatorSkin.svelte
ruk-ui/src/assets/icons/: bomb.svelte  close.svelte  copyScreen.svelte  debug.svelte  devices.svelte  dump.svelte  emptyFile.svelte  emptyFolder.svelte  ffowards.svelte  filter.svelte  folder.svelte  fullScreen.svelte  gameby.svelte  halt.svelte  happyFile.svelte  newFolder.svelte  pickFile.svelte  program.svelte  refresh.svelte  run.svelte  saveScreen.svelte  sendFile.svelte  stepBig.svelte  stepIn.svelte  stepOut.svelte  stepOver.svelte  unhappy.svelte
ruk-ui/src/lib/components/: disassembler.svelte  popover.svelte
ruk-ui/src/lib/disasm/: guiWrap.ts  lineColors.css  theme.js
ruk-ui/src/lib/elements/: debug.svelte  files.svelte  toolbar.svelte  tracing.svelte
ruk-ui/src/lib/emu/: buttons.svelte  calculator.svelte  emscripten.svelte  fetchers.js  listeners.ts  loader.js  module.js  sdk.js
ruk-ui/src/lib/jcore/: disassembly.ts  generated_opcodes.ts
ruk-ui/src/lib/stores/: app.ts
ruk-ui/src/lib/tools/: fstrings.ts
ruk-ui/src/lib/ui/: toolbar.svelte
ruk-ui/tests/: disassembler.test.ts  fstrings.test.ts
src/: interpreter.c  sdk.c  sdk.h
src/gui/html5/: gui.c  gui.html
src/gui/qt/: gui.cpp
src/gui/sdl/: gui.c
src/gui/skin/default/: skin.h
src/hardware/display/: display.c
src/hardware/timers/: timers.c
src/memory/: memory.c
